test/data/semantic-errors/return-not-in-function.ava
var thisFunction = function () -> ava "ava"; end;
return;